Disable button submit.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <input id="gkaptcha-input" class="gkaptcha-input" type="text" required>
                 </div>
             </div>
-            <button id="send-form" type="submit" class="btn">Send</button>
+            <button id="send-form" type="submit" class="btn" disabled>Send</button>
         </form>
 
         <script src="dist/gesturekit.min.js"></script>
